--- a/app/web/templates/index.html
+++ b/app/web/templates/index.html
@@ -5,18 +5,20 @@
     <meta http-equiv=X-UA-Compatible content="IE=edge">
     <meta name=viewport content="width=device-width,initial-scale=1">
     <link rel=icon href=/static/web/favicon.ico>
-    <title>simple-login-project</title>
-    <link href=/static/web/css/app.42d6225a.css rel=preload as=style>
-    <link href=/static/web/js/app.df0fc103.js rel=preload as=script>
-    <link href=/static/web/js/chunk-vendors.40d87993.js rel=preload as=script>
-    <link href=/static/web/css/app.42d6225a.css rel=stylesheet>
+    <title>PHOTOCLO</title>
+    <link href=/static/web/css/app.c681170d.css rel=preload as=style>
+    <link href=/static/web/css/chunk-vendors.74bc49b1.css rel=preload as=style>
+    <link href=/static/web/js/app.865fa6aa.js rel=preload as=script>
+    <link href=/static/web/js/chunk-vendors.5a3f681a.js rel=preload as=script>
+    <link href=/static/web/css/chunk-vendors.74bc49b1.css rel=stylesheet>
+    <link href=/static/web/css/app.c681170d.css rel=stylesheet>
 </head>
 <body>
 <noscript><strong>We're sorry but simple-login-project doesn't work properly
     without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
 <div id=app></div>
-<script src=/static/web/js/chunk-vendors.40d87993.js></script>
-<script src=/static/web/js/app.df0fc103.js></script>
+<script src=/static/web/js/chunk-vendors.5a3f681a.js></script>
+<script src=/static/web/js/app.865fa6aa.js></script>
 </body>
 </html>
